--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,18 @@
             <version>3.0.5.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
+
         <!--
         Various Application Context utilities, including EhCache, JavaMail, Quartz, and Freemarker integration
         Define this if you need any of these integrations
@@ -132,7 +144,11 @@
             <artifactId>plexus-slf4j-logging</artifactId>
             <version>1.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.concordion</groupId>
+            <artifactId>concordion</artifactId>
+            <version>1.4.2</version>
+        </dependency>
 
     </dependencies>
 
